k8s-files/010_create_pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
spec:
  containers:
    - name: hello-pod
      imagePullPolicy: IfNotPresent
      image: hello-world:latest
      ports:
        - containerPort: 8080
