k8s-files/022_create_provider_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-provider-service
  labels:
    app: k8s-provider-service
    tier: backend
spec:
  selector:
    matchLabels:
      app: k8s-provider-service
  template:
    metadata:
      labels:
        app: k8s-provider-service
    spec:
      containers:
        - name: k8s-provider-service
          imagePullPolicy: IfNotPresent
          image: iscram/k8s-provider-service:1.0.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
