k8s-files/070_create_provider_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-provider-service
  labels:
    app: k8s-provider-service
spec:
  ports:
    - port: 8080
      name: backend
  type: ClusterIP
  selector:
    app: k8s-provider-service
