k8s-files/080_create_consumer_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-consumer-service
  labels:
    app: k8s-consumer-service
spec:
  ports:
    - port: 8080
      name: frontend
  type: ClusterIP
  selector:
    app: k8s-consumer-service
